--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
       run: npm install --global surge
     
     - name: deploying on surge
-      run: surge ./build http://class3-usman.surge.sh/ --token ${{secrets.SECRET_SURGE}}
+      run: surge ./build http://class3-usman.surge.sh --token ${{secrets.SECRET_SURGE}}
